fixed spacing on profile results

--- a/css/index.less
+++ b/css/index.less
@@ -30,8 +30,9 @@
   margin: auto;
 	text-align: center;
 }
-#gamecontainer ul li{
+#gamescontainer li{
   display: inline-block;
+  margin-right: 8px;
 }
 
 .footer-text {
